updating exclamation mark in twitter CTA on all posts and adding software explosion post

--- a/writings/human-intelligence-abundant.html
+++ b/writings/human-intelligence-abundant.html
@@ -47,7 +47,7 @@
   <p>This doesn't guarantee a utopian world. Scarcities and new problems will arise, but they won't be tied to a lack of
     skilled intelligent labor.</p>
   <p>What are other ways to think about the positives of AI? Or, do you think this is too rosy of a picture? Feel free
-    to let me know either way via <a target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a>!</p>
+    to let me know either way via <a target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a>.</p>
 
 </body>
 
