--- a/writings/list-of-dialectics.html
+++ b/writings/list-of-dialectics.html
@@ -80,7 +80,7 @@
     with others. But, nobody else can read your mind or feel your emotions, try as they might. Making sense of it all is
     something you have to do for yourself in your own time.</p>
   <p>If any of these resonate with you or you have suggestions on others to include, please let me know via <a
-      target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a>!</p>
+      target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a>.</p>
 
 </body>
 
