--- a/writings/team-market-product.html
+++ b/writings/team-market-product.html
@@ -121,7 +121,7 @@
     How open are they with themselves and others about what they don't know? How do they learn?</p>
   <p>If you get the team right, given enough time, everything else will follow.</p>
   <p>Does this match your experience? Or, do you think about it differently? Feel free to let me know either way via <a
-      target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a>!</p>
+      target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a>.</p>
 
 </body>
 
