--- a/writings/how-clubhouse-evolved-from-gaming.html
+++ b/writings/how-clubhouse-evolved-from-gaming.html
@@ -137,7 +137,7 @@
   <p>To me, this is the most exciting promise of Clubhouse: a platform for anyone with an internet connection to have
     live conversations based on shared interests, regardless of nationality, income, or literacy.</p>
   <p>What do you think? Let me on know on <a href="https://twitter.com/ani_c_mohan">Twitter</a>. Or, find me on
-    Clubhouse!</p>
+    Clubhouse.</p>
 
 </body>
 
