Adding twitter preview tags to new articles

--- a/writings/human-intelligence-abundant.html
+++ b/writings/human-intelligence-abundant.html
@@ -9,6 +9,13 @@
   <meta property="og:image" content="https://animohan.me/images/me.png" />
   <meta name="description" content="When human intelligence becomes abundant">
   <meta name="author" content="Ani Mohan">
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="animohan.me" />
+  <meta name="twitter:title" content="When human intelligence becomes abundant" />
+  <meta name="twitter:description"
+    content="What happens to the world when human intelligence becomes abundant due to AI?" />
+  <meta name="twitter:image" content="https://animohan.me/images/me.png" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="../images/favicon.png">
