--- a/writings/upcoming-software-explosion.html
+++ b/writings/upcoming-software-explosion.html
@@ -9,6 +9,12 @@
   <meta property="og:image" content="https://animohan.me/images/me.png" />
   <meta name="description" content="Upcoming software explosion">
   <meta name="author" content="Ani Mohan">
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="animohan.me" />
+  <meta name="twitter:title" content="The upcoming software explosion" />
+  <meta name="twitter:description"
+    content="What happens when writing code becomes as accessible to everyone as taking photos?" />
+  <meta name="twitter:image" content="https://animohan.me/images/me.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="../images/favicon.png">
