Added upcoming software explosion

--- a/writings.html
+++ b/writings.html
@@ -32,6 +32,8 @@
     My writings
   </h1>
   <p>
+<a href="./writings/upcoming-software-explosion.html">The upcoming software explosion</a>
+    <br><br>
     <a href="./writings/human-intelligence-abundant.html">When human intelligence becomes abundant</a>
     <br><br>
     <a href="./writings/how-clubhouse-evolved-from-gaming.html">How Clubhouse evolved from gaming</a>
