--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <img src="./images/me.png" alt="Ani Mohan">
   </div>
   <p>
-    Welcome to my website. I currently lead a product team at Google Labs building new generative AI products.
-    Previously, I was co-founder and general manager of <a target="_blank"
+    Welcome to my website. I'm currently at Google Labs building a new product that enables people to make apps using AI
+    without writing code. Previously, I was co-founder and general manager of <a target="_blank"
       href="https://www.gamedeveloper.com/business/google-s-html5-game-platform-gamesnacks-crosses-35-million-users">GameSnacks</a>,
     a gaming platform acquired by Google.
     <br><br>
