Escape ampersands in HTML

--- a/press.html
+++ b/press.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Ani Mohan press personal site">
   <meta name="author" content="Ani Mohan">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&amp;display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="./images/favicon.png">
   <link rel="stylesheet" href="./css/styles.css">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158669626-1"></script>
@@ -53,17 +53,17 @@
   <h2>Videos</h2>
   <p><a target="_blank" href="https://www.youtube.com/watch?v=fGGO7Fpy-Gk">GameSnacks: Google's new HTML5 gaming
       platform</a></p>
-  <!-- <p><a target="_blank" href="https://www.youtube.com/watch?v=tsr9eUwfGcY&t=2s">Modern mobile web</a></p> -->
-  <p><a target="_blank" href="https://www.youtube.com/watch?v=iEl6iYiInTM&t=2s">Next generation web</a></p>
-  <p><a target="_blank" href="https://www.youtube.com/watch?v=vyfy7AdPk2g&t=2s">Lightweight real world interactions
+  <!-- <p><a target="_blank" href="https://www.youtube.com/watch?v=tsr9eUwfGcY&amp;t=2s">Modern mobile web</a></p> -->
+  <p><a target="_blank" href="https://www.youtube.com/watch?v=iEl6iYiInTM&amp;t=2s">Next generation web</a></p>
+  <p><a target="_blank" href="https://www.youtube.com/watch?v=vyfy7AdPk2g&amp;t=2s">Lightweight real world interactions
       with the physical web</a></p>
   <p><a target="_blank" href="https://youtu.be/09vUYIc_k3k?t=1">Choose a PM role that's right for you</a></p>
-  <p><a target="_blank" href="https://www.youtube.com/watch?v=Gg9N9F8oE7Y&t=1s">Different types of product
+  <p><a target="_blank" href="https://www.youtube.com/watch?v=Gg9N9F8oE7Y&amp;t=1s">Different types of product
       management</a></p>
   <h2>Podcasts</h2>
-  <p><a target="_blank" href="https://open.spotify.com/episode/646ghh9dXr33gjHwPRquj8?si=e6577bd6721c49dd&nd=1">Game of
+  <p><a target="_blank" href="https://open.spotify.com/episode/646ghh9dXr33gjHwPRquj8?si=e6577bd6721c49dd&amp;nd=1">Game of
       Life</a></p>
-  <p><a target="_blank" href="https://open.spotify.com/episode/2ZFAZWHJpxXpQa4Gg82bpk?si=7b47dd0c71c34ed3&nd=1">Startup
+  <p><a target="_blank" href="https://open.spotify.com/episode/2ZFAZWHJpxXpQa4Gg82bpk?si=7b47dd0c71c34ed3&amp;nd=1">Startup
       Project</a></p>
 </body>
 
