--- a/writings/five-days-at-sundance.html
+++ b/writings/five-days-at-sundance.html
@@ -9,7 +9,7 @@
         <meta name="description" content="Five days at Sundance">
         <meta name="author" content="Ani Mohan">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:400,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:400,700&amp;display=swap" rel="stylesheet">
         <link rel="icon" type="image/png" href="../images/favicon.png">
         <link rel="stylesheet" href="../css/styles.css">
         <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -76,7 +76,7 @@
             <br><br>                
             <b class="writing-section-lead">The big picture</b>
             <br><br>
-            Again courtesy of Woodside, I got tickets to almost everything I wanted to see. Every screening was sold out, and nearly every one had the director stick around afterwards for a 10 minute Q&A. Fellow moviegoers were chatty after the showings, eager to debrief what they had just seen. The whole thing was a film lover's dream.
+            Again courtesy of Woodside, I got tickets to almost everything I wanted to see. Every screening was sold out, and nearly every one had the director stick around afterwards for a 10 minute Q&amp;A. Fellow moviegoers were chatty after the showings, eager to debrief what they had just seen. The whole thing was a film lover's dream.
             <br><br>
             I’ve written <a href="#reviews">brief reviews</a> of the films at the end of the post. 
             <br><br>
