--- a/writings/making-posters.html
+++ b/writings/making-posters.html
@@ -9,7 +9,7 @@
         <meta name="description" content="Making posters">
         <meta name="author" content="Ani Mohan">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&amp;display=swap" rel="stylesheet">
         <link rel="icon" type="image/png" href="../images/favicon.png">
         <link rel="stylesheet" href="../css/styles.css">
         <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -75,7 +75,7 @@
             <br><br>
             1. The “Shapes and Tools” section of Figma’s help center documentation. The following articles are especially relevant: <a href="https://help.figma.com/hc/en-us/articles/360039832054-Frames-and-Groups" target="_blank">Frames and Groups</a>, <a href="https://help.figma.com/hc/en-us/articles/360040450253-Masks" target="_blank">Masks</a>, <a href="https://help.figma.com/hc/en-us/articles/360040450173-Using-the-Arc-Tool" target="_blank">Arc Tool</a>, and, most importantly, <a href="https://help.figma.com/hc/en-us/articles/360040450213-Vector-Networks" target="_blank">Vector Networks</a>. 
             <br><br>
-            2. Tutorials such as this <a href="https://www.youtube.com/watch?v=lAZ3vglNCuQ&app=desktop" target="_blank">“Figma - Vector Graphics for Beginners”</a> video or this <a href="https://medium.com/figma-africa/creating-simple-character-illustrations-using-figma-a9405665a0db" target="_blank">“Creating Simple Character Illustrations Using Figma”</a> written guide.
+            2. Tutorials such as this <a href="https://www.youtube.com/watch?v=lAZ3vglNCuQ&amp;app=desktop" target="_blank">“Figma - Vector Graphics for Beginners”</a> video or this <a href="https://medium.com/figma-africa/creating-simple-character-illustrations-using-figma-a9405665a0db" target="_blank">“Creating Simple Character Illustrations Using Figma”</a> written guide.
             <br><br>
             3. The <a href="https://bezier.method.ac/#" target="_blank">Bezier Game</a> to learn how to use the Pen Tool. The Pen Tool is a staple of vector illustration software — it allows you to draw custom lines, curves, and shapes. The Bezier Game is fun and well-designed. It also gets you comfortable with the Pen Tool in 15 minutes.
             <br><br>
