--- a/writings/team-market-product.html
+++ b/writings/team-market-product.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Team > market > product in early stage startups">
   <meta name="author" content="Ani Mohan">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&amp;display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="../images/favicon.png">
   <link rel="stylesheet" href="../css/styles.css">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158669626-1"></script>
@@ -107,7 +107,7 @@
     ourselves and each other for too long when something wasn't working.</p>
   <p>Third, thinking probabilistically. We assigned probability weights to different possible outcomes for various
     experiments and product ideas we had. This allowed us to develop a shared understanding of risk and align on
-    priorities. <a href="https://www.amazon.com/dp/B074DG9LQF/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1"
+    priorities. <a href="https://www.amazon.com/dp/B074DG9LQF/ref=dp-kindle-redirect?_encoding=UTF8&amp;btkr=1"
       target="_blank">Thinking in Bets</a> by Annie Duke is a fantastic read for this.</p>
   <p>And fourth, having fun! We knew it'd be a slog. Without enjoying the journey we wouldn't have persisted. We joked
     around, hosted fun events, and made fun of ourselves constantly. Of course, working in gaming helped here.</p>
