--- a/posters.html
+++ b/posters.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Ani Mohan images posters digital art vector art personal site">
         <meta name="author" content="Ani Mohan">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&amp;display=swap" rel="stylesheet">
         <link rel="icon" type="image/png" href="./images/favicon.png">
         <link rel="stylesheet" href="./css/styles.css">
         <!-- Global site tag (gtag.js) - Google Analytics -->
