--- a/start-here.html
+++ b/start-here.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Ani Mohan start here personal site">
   <meta name="author" content="Ani Mohan">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&amp;display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="./images/favicon.png">
   <link rel="stylesheet" type="text/css" href="./css/styles.css">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158669626-1"></script>
