--- a/writings/human-intelligence-abundant.html
+++ b/writings/human-intelligence-abundant.html
@@ -17,7 +17,7 @@
   <meta name="twitter:image" content="https://animohan.me/images/me.png" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&amp;display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="../images/favicon.png">
   <link rel="stylesheet" href="../css/styles.css">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158669626-1"></script>
