Update homepage hero and meta tags

--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Ani Mohan</title>
-  <meta property="og:title" content="Ani Mohan" />
-  <meta property="og:description" content="Ani Mohan's home on the internet." />
-  <meta property="og:image" content="https://animohan.me/images/me.png" />
-  <meta name="description" content="Ani Mohan home page personal site">
+  <title>Ani Mohan – Building AI products that turn everyone into a creator</title>
   <meta name="author" content="Ani Mohan">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Ani Mohan is a product leader at Google Labs building NotebookLM and agentic AI content systems. Founder of GameSnacks, angel investor in consumer-AI.">
+  <meta property="og:title" content="Building AI products that turn everyone into a creator">
+  <meta property="og:description" content="Hi, I'm Ani Mohan, product leader at Google Labs working on NotebookLM. I build tools that amplify human creativity.">
+  <meta property="og:image" content="https://animohan.me/og-image.jpg">
+  <meta property="og:url" content="https://animohan.me">
+  <meta property="og:type" content="website">
   <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&amp;display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="./images/favicon.png">
   <link rel="stylesheet" href="./css/styles.css">
@@ -23,22 +25,12 @@
 </head>
 
 <body>
-  <h1>Ani Mohan</h1>
-  <div>
-    <img src="./images/me.png" alt="Ani Mohan">
-  </div>
-  <p>
-    Welcome to my website. I'm currently at Google Labs building a new product that empowers anyone to make apps using
-    AI. Previously, I was co-founder and general manager of <a target="_blank"
-      href="https://www.gamedeveloper.com/business/google-s-html5-game-platform-gamesnacks-crosses-35-million-users">GameSnacks</a>,
-    a gaming platform acquired by Google.
-    <br><br>
-    <a href="./start-here.html">Start here</a> if you don't know me.
-    <br><br>
-    Read <a href="./writings.html">my writings</a>. See <a href="./press.html">press here</a>.
-    <br><br>
-    Connect with me on <a target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a>.
-  </p>
+  <header class="hero">
+    <h1>Building AI products that turn everyone into a creator.</h1>
+    <p>NotebookLM & beyond — crafting agentic content systems at Google Labs.</p>
+    <a class="cta" href="/writings/">Read my latest notes →</a>
+  </header>
+  <p>Hi, I'm <strong>Ani Mohan</strong>, product leader at Google Labs building NotebookLM and next-gen AI content platforms. Previously founded GameSnacks (acquired by Google) and led consumer product for Claude.ai at Anthropic. I invest in and advise early AI startups. I chase ideas where technology amplifies human creativity.</p>
 </body>
 
 </html>
