Center entire home page and restore hero spacing

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <p>Currently working on NotebookLM and crafting agentic content systems at Google Labs.</p>
     <a class="cta" href="/writings/">Read my latest notes →</a>
   </header>
-  <p>Hi, I'm <strong>Ani Mohan</strong>, product leader at Google Labs building NotebookLM and next-gen AI content platforms. Previously founded GameSnacks (acquired by Google) and led consumer product for Claude.ai at Anthropic. I invest in and advise early AI startups. I chase ideas where technology amplifies human creativity.</p>
+  <p class="intro">Hi, I'm <strong>Ani Mohan</strong>, product leader at Google Labs building NotebookLM and next-gen AI content platforms. Previously founded GameSnacks (acquired by Google) and led consumer product for Claude.ai at Anthropic. I invest in and advise early AI startups. I chase ideas where technology amplifies human creativity.</p>
 </body>
 
 </html>
