Complete website overhaul with improved structure, accessibility, and performance
- Fixed inconsistent HTML structure across all pages
- Updated SEO meta tags with proper og:image and Twitter cards
- Added consistent navigation with Home/Writings links
- Cleaned up CSS: removed old files, unused fonts, added missing classes
- Improved accessibility: better color contrast, skip links, ARIA labels, semantic HTML
- Optimized performance: font preconnect, lazy loading images
- Enhanced mobile responsiveness with better scaling
- Fixed broken CTA button link and balanced spacing
- Updated all blog posts with consistent navigation structure

--- a/investments.html
+++ b/investments.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>Investments - Ani Mohan</title>
-        <meta name="description" content="Ani Mohan startups early-stage angel investments portfolio">
+        <meta name="description" content="Angel investment portfolio of Ani Mohan. Supporting early-stage startups in consumer AI, developer tools, and transformative technology.">
         <meta name="author" content="Ani Mohan">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta property="og:title" content="Investments - Ani Mohan">
+        <meta property="og:description" content="Angel investment portfolio of Ani Mohan. Supporting early-stage startups in consumer AI, developer tools, and transformative technology.">
+        <meta property="og:image" content="https://animohan.me/images/me.png">
+        <meta property="og:url" content="https://animohan.me/investments.html">
+        <meta property="og:type" content="website">
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:title" content="Investments - Ani Mohan">
+        <meta name="twitter:description" content="Angel investment portfolio of Ani Mohan">
+        <meta name="twitter:image" content="https://animohan.me/images/me.png">
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&amp;display=swap" rel="stylesheet">
         <link rel="icon" type="image/png" href="./images/favicon.png">
         <link rel="stylesheet" href="./css/styles.css">
