--- a/posters.html
+++ b/posters.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>Posters - Ani Mohan</title>
-        <meta name="description" content="Ani Mohan images posters digital art vector art personal site">
+        <meta name="description" content="Digital art and poster designs by Ani Mohan. A collection of minimalist posters exploring themes of space, nature, and human experience.">
         <meta name="author" content="Ani Mohan">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta property="og:title" content="Posters - Ani Mohan">
+        <meta property="og:description" content="Digital art and poster designs by Ani Mohan. A collection of minimalist posters exploring themes of space, nature, and human experience.">
+        <meta property="og:image" content="https://animohan.me/images/posters/poster_pale_blue_dot.png">
+        <meta property="og:url" content="https://animohan.me/posters.html">
+        <meta property="og:type" content="website">
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="Posters - Ani Mohan">
+        <meta name="twitter:description" content="Digital art and poster designs by Ani Mohan">
+        <meta name="twitter:image" content="https://animohan.me/images/posters/poster_pale_blue_dot.png">
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&amp;display=swap" rel="stylesheet">
         <link rel="icon" type="image/png" href="./images/favicon.png">
         <link rel="stylesheet" href="./css/styles.css">
@@ -29,15 +39,15 @@
         </h1>
         <div class="body-text" id="start-here-text">            
             <a href="./images/posters/poster_pale_blue_dot.png" target="_blank">
-                <img src="./images/posters/poster_pale_blue_dot.png" class="my-images-preview" />
+                <img src="./images/posters/poster_pale_blue_dot.png" class="my-images-preview" alt="Pale Blue Dot poster design" loading="lazy" />
             </a>
             <br><br>
             <a href="./images/posters/poster_cascais.png" target="_blank">
-                <img src="./images/posters/poster_cascais.png" class="my-images-preview" />
+                <img src="./images/posters/poster_cascais.png" class="my-images-preview" alt="Cascais poster design" loading="lazy" />
             </a>
             <br><br>
             <a href="./images/posters/poster_inner_life.png" target="_blank">
-                <img src="./images/posters/poster_inner_life.png" class="my-images-preview" />
+                <img src="./images/posters/poster_inner_life.png" class="my-images-preview" alt="Inner Life poster design" loading="lazy" />
             </a>            
         </div>
         
