--- a/writings.html
+++ b/writings.html
@@ -5,9 +5,15 @@
   <meta charset="utf-8">
   <title>My writings - Ani Mohan</title>
   <meta property="og:title" content="My writings - Ani Mohan" />
-  <meta property="og:description" content="Ani Mohan's writings on the internet." />
+  <meta property="og:description" content="Essays on AI, product development, and technology's impact on creativity. Thoughts from building NotebookLM at Google Labs." />
   <meta property="og:image" content="https://animohan.me/images/me.png" />
-  <meta name="description" content="Ani Mohan writings essays writing personal site stuff I've written">
+  <meta property="og:url" content="https://animohan.me/writings.html">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="My writings - Ani Mohan">
+  <meta name="twitter:description" content="Essays on AI, product development, and technology's impact on creativity">
+  <meta name="twitter:image" content="https://animohan.me/images/me.png">
+  <meta name="description" content="Essays and thoughts by Ani Mohan on AI, product development, and technology's impact on creativity">
   <meta name="author" content="Ani Mohan">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&amp;display=swap" rel="stylesheet">
@@ -23,11 +29,12 @@
 </head>
 
 <body>
-  <a id="logo" href="./index.html">
-    <h3>
-      Ani Mohan
-    </h3>
-  </a>
+  <nav>
+    <a href="./index.html" class="logo">Ani Mohan</a>
+    <ul class="nav-links">
+      <li><a href="./writings.html" class="active">Writings</a></li>
+    </ul>
+  </nav>
   <h1>
     My writings
   </h1>
