--- a/writings/five-days-at-sundance.html
+++ b/writings/five-days-at-sundance.html
@@ -22,12 +22,15 @@
         </script>   
     </head>
     <body>
+        <a href="#main" class="skip-link">Skip to main content</a>
         <!-- <script src="js/scripts.js"></script> -->
-        <h3>
-            <a id="logo" href="../index.html">
-                Ani Mohan
-            </a>
-        </h3>
+        <nav>
+            <a href="../index.html" class="logo">Ani Mohan</a>
+            <ul class="nav-links">
+                <li><a href="../writings.html">Writings</a></li>
+            </ul>
+        </nav>
+        <main id="main">
         <h1 class="title">
             Five days at Sundance
         </h1>
@@ -123,6 +126,6 @@
             <br><br>
             <b>Wendy</b>: 2 stars. Retelling of Peter Pan from Wendy’s perspective. Slow and serious, ironic for a film about childhood.
         </p>
-        
+        </main>
     </body>
 </html>
