--- a/writings/how-clubhouse-evolved-from-gaming.html
+++ b/writings/how-clubhouse-evolved-from-gaming.html
@@ -25,11 +25,14 @@
 </head>
 
 <body>
-  <a id="logo" href="../index.html">
-    <h3>
-      Ani Mohan
-    </h3>
-  </a>
+  <a href="#main" class="skip-link">Skip to main content</a>
+  <nav>
+    <a href="../index.html" class="logo">Ani Mohan</a>
+    <ul class="nav-links">
+      <li><a href="../writings.html">Writings</a></li>
+    </ul>
+  </nav>
+  <main id="main">
   <h1>
     How Clubhouse evolved from gaming
   </h1>
@@ -139,6 +142,7 @@
   <p>What do you think? Let me on know on <a href="https://twitter.com/ani_c_mohan">Twitter</a>. Or, find me on
     Clubhouse.</p>
 
+  </main>
 </body>
 
 </html>
