--- a/writings/human-intelligence-abundant.html
+++ b/writings/human-intelligence-abundant.html
@@ -30,11 +30,14 @@
 </head>
 
 <body>
-  <a id="logo" href="../index.html">
-    <h3>
-      Ani Mohan
-    </h3>
-  </a>
+  <a href="#main" class="skip-link">Skip to main content</a>
+  <nav>
+    <a href="../index.html" class="logo">Ani Mohan</a>
+    <ul class="nav-links">
+      <li><a href="../writings.html">Writings</a></li>
+    </ul>
+  </nav>
+  <main id="main">
   <h1>
     When human intelligence becomes abundant
   </h1>
@@ -56,6 +59,7 @@
   <p>What are other ways to think about the positives of AI? Or, do you think this is too rosy of a picture? Feel free
     to let me know either way via <a target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a>.</p>
 
+  </main>
 </body>
 
 </html>
