--- a/writings/team-market-product.html
+++ b/writings/team-market-product.html
@@ -23,11 +23,14 @@
 </head>
 
 <body>
-  <a id="logo" href="../index.html">
-    <h3>
-      Ani Mohan
-    </h3>
-  </a>
+  <a href="#main" class="skip-link">Skip to main content</a>
+  <nav>
+    <a href="../index.html" class="logo">Ani Mohan</a>
+    <ul class="nav-links">
+      <li><a href="../writings.html">Writings</a></li>
+    </ul>
+  </nav>
+  <main id="main">
   <h1>
     Team > market > product
   </h1>
@@ -123,6 +126,7 @@
   <p>Does this match your experience? Or, do you think about it differently? Feel free to let me know either way via <a
       target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a>.</p>
 
+  </main>
 </body>
 
 </html>
