--- a/writings/upcoming-software-explosion.html
+++ b/writings/upcoming-software-explosion.html
@@ -29,11 +29,12 @@
 </head>
 
 <body>
-  <a id="logo" href="../index.html">
-    <h3>
-      Ani Mohan
-    </h3>
-  </a>
+  <nav>
+    <a href="../index.html" class="logo">Ani Mohan</a>
+    <ul class="nav-links">
+      <li><a href="../writings.html">Writings</a></li>
+    </ul>
+  </nav>
   <h1>
     The upcoming software explosion
   </h1>
