--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
   <meta name="description" content="Ani Mohan is a product leader at Google Labs building NotebookLM and agentic AI content systems. Founder of GameSnacks, angel investor in consumer-AI.">
   <meta property="og:title" content="Building AI products that turn everyone into a creator">
   <meta property="og:description" content="Hi, I'm Ani Mohan, product leader at Google Labs working on NotebookLM. I build tools that amplify human creativity.">
-  <meta property="og:image" content="https://animohan.me/og-image.jpg">
+  <meta property="og:image" content="https://animohan.me/images/me.png">
   <meta property="og:url" content="https://animohan.me">
   <meta property="og:type" content="website">
-  <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&amp;display=swap" rel="stylesheet">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Building AI products that turn everyone into a creator">
+  <meta name="twitter:description" content="Hi, I'm Ani Mohan, product leader at Google Labs working on NotebookLM. I build tools that amplify human creativity.">
+  <meta name="twitter:image" content="https://animohan.me/images/me.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&amp;display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="./images/favicon.png">
   <link rel="stylesheet" href="./css/styles.css">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158669626-1"></script>
@@ -25,13 +31,24 @@
 </head>
 
 <body>
-  <header class="hero">
-    <img class="hero-img" src="./images/me.png" alt="Ani Mohan headshot">
-    <h1>Building AI products that turn everyone into a creator.</h1>
-    <p>Currently working on NotebookLM and crafting agentic content systems at Google Labs.</p>
-    <a class="cta" href="/writings/">Read my latest notes →</a>
-  </header>
-  <p class="intro">Hi, I'm <strong>Ani Mohan</strong>, product leader at Google Labs building NotebookLM and next-gen AI content platforms. Previously founded GameSnacks (acquired by Google) and led consumer product for Claude.ai at Anthropic. I invest in and advise early AI startups. I chase ideas where technology amplifies human creativity.</p>
+  <a href="#main" class="skip-link">Skip to main content</a>
+  <nav role="navigation" aria-label="Main navigation">
+    <a href="./index.html" class="logo">Ani Mohan</a>
+    <ul class="nav-links">
+      <li><a href="./writings.html">Writings</a></li>
+    </ul>
+  </nav>
+  <main id="main">
+    <header class="hero">
+      <img class="hero-img" src="./images/me.png" alt="Ani Mohan - Product leader at Google Labs">
+      <h1>Building AI products that turn everyone into a creator.</h1>
+      <p>Currently working on NotebookLM and crafting agentic content systems at Google Labs.</p>
+      <a class="cta" href="./writings.html" aria-label="Read my latest writings">Read my latest notes →</a>
+    </header>
+    <section class="intro" aria-label="About me">
+      <p>Hi, I'm <strong>Ani Mohan</strong>, product leader at Google Labs building NotebookLM and next-gen AI content platforms. Previously founded GameSnacks (acquired by Google) and led consumer product for Claude.ai at Anthropic. I invest in and advise early AI startups. I chase ideas where technology amplifies human creativity.</p>
+    </section>
+  </main>
 </body>
 
 </html>
