--- a/writings/list-of-dialectics.html
+++ b/writings/list-of-dialectics.html
@@ -24,11 +24,14 @@
 </head>
 
 <body>
-  <a id="logo" href="../index.html">
-    <h3>
-      Ani Mohan
-    </h3>
-  </a>
+  <a href="#main" class="skip-link">Skip to main content</a>
+  <nav>
+    <a href="../index.html" class="logo">Ani Mohan</a>
+    <ul class="nav-links">
+      <li><a href="../writings.html">Writings</a></li>
+    </ul>
+  </nav>
+  <main id="main">
   <h1>
     A list of dialectics
   </h1>
@@ -82,6 +85,7 @@
   <p>If any of these resonate with you or you have suggestions on others to include, please let me know via <a
       target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a>.</p>
 
+  </main>
 </body>
 
 </html>
