Update copy and rebrand from 'Writings' to 'Notes'
- Updated homepage headline to 'Building AI that gives everyone superpowers'
- Refined intro paragraph to emphasize amplifying human potential at scale
- Renamed writings.html to notes.html and updated all links
- Changed all references from 'Writings' to 'Notes' across the site
- Improved homepage spacing with equal gaps between title, button, and paragraph

--- a/index.html
+++ b/index.html
@@ -35,18 +35,17 @@
   <nav role="navigation" aria-label="Main navigation">
     <a href="./index.html" class="logo">Ani Mohan</a>
     <ul class="nav-links">
-      <li><a href="./writings.html">Writings</a></li>
+      <li><a href="./notes.html">Notes</a></li>
     </ul>
   </nav>
   <main id="main">
     <header class="hero">
       <img class="hero-img" src="./images/me.png" alt="Ani Mohan - Product leader at Google Labs">
-      <h1>Building AI products that turn everyone into a creator.</h1>
-      <p>Currently working on NotebookLM and crafting agentic content systems at Google Labs.</p>
-      <a class="cta" href="./writings.html" aria-label="Read my latest writings">Read my latest notes →</a>
+      <h1>Building AI that gives everyone superpowers.</h1>
+      <a class="cta" href="./notes.html" aria-label="Read my latest notes">Read my latest notes →</a>
     </header>
     <section class="intro" aria-label="About me">
-      <p>Hi, I'm <strong>Ani Mohan</strong>, product leader at Google Labs building NotebookLM and next-gen AI content platforms. Previously founded GameSnacks (acquired by Google) and led consumer product for Claude.ai at Anthropic. I invest in and advise early AI startups. I chase ideas where technology amplifies human creativity.</p>
+      <p>Hi, I'm <strong>Ani Mohan</strong>, product leader at Google Labs creating NotebookLM and agentic content systems. Previously founded GameSnacks (acquired by Google) and led consumer product for Claude.ai at Anthropic. I invest in and advise early AI startups. I chase ideas where technology amplifies human potential at mass consumer scale.</p>
     </section>
   </main>
 </body>
