--- a/notes.html
+++ b/notes.html
@@ -3,17 +3,17 @@
 
 <head>
   <meta charset="utf-8">
-  <title>My writings - Ani Mohan</title>
-  <meta property="og:title" content="My writings - Ani Mohan" />
-  <meta property="og:description" content="Essays on AI, product development, and technology's impact on creativity. Thoughts from building NotebookLM at Google Labs." />
+  <title>My notes - Ani Mohan</title>
+  <meta property="og:title" content="My notes - Ani Mohan" />
+  <meta property="og:description" content="Notes on AI, product development, and technology's impact on creativity. Thoughts from building NotebookLM at Google Labs." />
   <meta property="og:image" content="https://animohan.me/images/me.png" />
-  <meta property="og:url" content="https://animohan.me/writings.html">
+  <meta property="og:url" content="https://animohan.me/notes.html">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="My writings - Ani Mohan">
-  <meta name="twitter:description" content="Essays on AI, product development, and technology's impact on creativity">
+  <meta name="twitter:title" content="My notes - Ani Mohan">
+  <meta name="twitter:description" content="Notes on AI, product development, and technology's impact on creativity">
   <meta name="twitter:image" content="https://animohan.me/images/me.png">
-  <meta name="description" content="Essays and thoughts by Ani Mohan on AI, product development, and technology's impact on creativity">
+  <meta name="description" content="Notes and thoughts by Ani Mohan on AI, product development, and technology's impact on creativity">
   <meta name="author" content="Ani Mohan">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&amp;display=swap" rel="stylesheet">
@@ -32,11 +32,11 @@
   <nav>
     <a href="./index.html" class="logo">Ani Mohan</a>
     <ul class="nav-links">
-      <li><a href="./writings.html" class="active">Writings</a></li>
+      <li><a href="./notes.html" class="active">Notes</a></li>
     </ul>
   </nav>
   <h1>
-    My writings
+    My notes
   </h1>
   <p>
 <a href="./writings/upcoming-software-explosion.html">The upcoming software explosion</a>
