--- a/writings/list-of-dialectics.html
+++ b/writings/list-of-dialectics.html
@@ -28,7 +28,7 @@
   <nav>
     <a href="../index.html" class="logo">Ani Mohan</a>
     <ul class="nav-links">
-      <li><a href="../writings.html">Writings</a></li>
+      <li><a href="../notes.html">Notes</a></li>
     </ul>
   </nav>
   <main id="main">
